<resources>
    <string name="app_name">Restaurant</string>

    <!--actionbar-->
    <string name="search_hint">Insert String</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--bottomnavigation-->
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="history">History</string>

    <!--home-->
    <string name="nama_menu">Nama Menu</string>
    <string name="harga_menu">Harga Menu</string>
    <string name="rupiah">Rp. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--dialogfilter-->
    <string name="filter">Filter</string>
    <string name="type">Type</string>
    <string name="harga">Harga</string>
    <string name="strip">-</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="harga_min">Harga Min</string>
    <string name="harga_max">Harga Max</string>

</resources>