<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_filter">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/filter"
        android:fontFamily="@font/segoeui_bold"
        android:textSize="36sp"/>

    <View
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="1dp"
        android:background="#FF808080"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/segoeui_bold"
            android:text="@string/type"
            android:textSize="16sp" />

    <Spinner
        android:id="@+id/filter_spinner"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="1dp"
        android:background="#FF808080"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/segoeui_bold"
            android:text="@string/harga_min"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/segoeui_bold"
            android:text="@string/harga_max"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_harga_min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/edt_harga_max"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:inputType="numberDecimal"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_set_cancel"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="12sp" />
        <Button
            android:id="@+id/btn_set_submit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>